# enigma

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/c++/: 常量指针和指向常量的指针.md  指针.md  放置新表达式.md
docs/glsl/: GLSL着色器.md  GLSL语法.md
enigma/: CMakeLists.txt  main.cpp
enigma/include/: enigma.h
enigma/include/base/: EgThread.h
enigma/include/core/: EgAlphaType.h  EgBlendMode.h  EgCanvas.h  EgColor.h  EgColorSpace.h  EgPaint.h  EgPoint.h  EgRect.h  EgScalar.h  EgShader.h  EgSize.h  EgString.h
enigma/include/private/base/: EgAPI.h  EgAlignedStorage.h  EgAssert.h  EgCPUTypes.h  EgDebug.h  EgFloatingPoint.h  EgMath.h  EgSafe32.h  EgSpan.h  EgTArray.h  EgTFitsIn.h  EgTo.h  EgTypeTraits.h
enigma/include/utils/: EgLog.h
enigma/src/base/: EgSafeMath.h  EgUTF.h  EgUtils.cpp  EgUtils.h  EgVx.h
enigma/src/core/: EgBlendMode.cpp  EgColor.cpp  EgPaint.cpp  EgPoint.cpp  EgRect.cpp  EgString.cpp
enigma/src/gpu/lantern/glsl/: EgGLSLProgramBuilder.cpp  EgGLSLProgramBuilder.h  EgGLSLShaderBuilder.cpp  EgGLSLShaderBuilder.h  EgGLSLVertexShaderBuilder.h
enigma/src/utils/: EgLog.cpp
enigma/tests/: EnigmaContext.cpp
samples/MusicPlayer/: CMakeLists.txt
samples/MusicPlayer/src/: CMakeLists.txt  musicplayer_main.cpp
src/include/core/: EgPoint.h  EgRect.h  EgScalar.h  EgTypes.h
src/include/private/base/: EgFloatBits.h  EgFloatingPoint.h
